Spark-submit script on AWS EMR with tuning params