@@ -36,3 +36,8 @@ from pyspark.sql import SparkSession
 spark = SparkSession.build.getOrCreate()
 
 ## confirm pyspark working by typing "spark"
+
+---
+
+## Spark-Submit (for Java)
+spark-submit --conf "spark.driver.extraJavaOptions=-XX:+UseG1GC -verbose:gc -XX:+PrintGCTimeStamps -XX:InitiatingHeapOccupancyPercent=35 -Dlinear.properties.file=./proposal/proposal-conformance-LTS-dev.properties -DexecutionDate=2020/08/08" --conf "spark.executor.extraJavaOptions=-XX:+UseG1GC -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:InitiatingHeapOccupancyPercent=35 -Dlinear.properties.file=./proposal/proposal-conformance-LTS-dev.properties -DexecutionDate=2020/08/08" --name linear-proposalheader-conformed-dev --conf spark.driver.memory=12g --conf spark.driver.cores=2 --conf spark.executor.memory=25g --conf spark.executor.cores=3 --conf spark.kryo.unsafe=true --conf spark.kryoserializer.buffer=300M --conf spark.kryoserializer.buffer.max=1024M --conf spark.task.maxFailures=10 --conf spark.yarn.executor.memoryOverhead=5120m --conf spark.dynamicAllocation.enabled=true --conf spark.dynamicAllocation.initialExecutors=75 --conf spark.executor.extraClassPath=/usr/lib/spark/jars/ --master yarn --deploy-mode cluster --class com.dtci.linear.core.spark.SparkApplication s3a://dp-repository-dev/dp-linear-conformance/dp-linear-conformation-1.0.15.jar
